--- a/CalculoIMC/app/src/main/res/values/strings.xml
+++ b/CalculoIMC/app/src/main/res/values/strings.xml
@@ -1,5 +1,4 @@
 <resources>
-    <string name="app_name">CalculoIMC</string>
+    <string name="app_name">Cálculo IMC</string>
     <string name="action_settings">Settings</string>
-    <string name="splash_screen">Cálculo de IMC</string>
 </resources>
