--- a/CalculoIMC/app/src/main/res/values/strings.xml
+++ b/CalculoIMC/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="txt_resultado">Resultado</string>
     <string name="btn_calcular">Calcular</string>
     <string name="btn_limpar">Limpar</string>
+    <string name="btn_gravar">Gravar</string>
 </resources>
