--- a/CalculoIMC/app/src/main/res/values/strings.xml
+++ b/CalculoIMC/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Índice de Massa Corpórea</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">IMC</string>
+    <string name="action_settings">Configuracões</string>
     <string name="txt_peso">Peso</string>
     <string name="txt_altura">Altura</string>
     <string name="txt_resultado">Resultado</string>
