--- a/CalculoIMC/app/src/main/res/values-en/strings.xml
+++ b/CalculoIMC/app/src/main/res/values-en/strings.xml
@@ -1,5 +1,35 @@
 <resources>
-    <string name="app_name">CalculoIMC</string>
+    <string name="app_name">IMC</string>
     <string name="action_settings">Settings</string>
-    <string name="splash_screen">Cálculo de IMC</string>
+
+    <!--Texts-->
+    <string name="txt_peso">Weight</string>
+    <string name="txt_altura">Height</string>
+    <string name="txt_resultado">Result</string>
+    <string name="txt_cintura">Waist</string>
+    <string name="txt_quadril">Hip</string>
+    <string name="txt_idade">Age</string>
+
+    <!--Botões-->
+    <string name="btn_calcular">Calculate</string>
+    <string name="btn_limpar">Reset</string>
+    <string name="btn_gravar">Record</string>
+
+    <!--Radio Group-->
+    <string name="rdg_sexo">Gender</string>
+    <string name="rgd_masc">Male</string>
+    <string name="rgd_femi">Female</string>
+
+    <!--Campos obrigatórios-->
+    <string name="camposObrig">Required fields</string>
+    <string name="campoPeso">Required field weight</string>
+    <string name="campoAltura">Required field height</string>
+    <string name="campoCintura">Required field waist</string>
+    <string name="campoQuadril">Required field hip</string>
+    <string name="campoIdade">Required field age</string>
+
+    <!--Abas-->
+    <string name="abaImc">BMI</string>
+    <string name="abaRcq">WHR</string>
+
 </resources>
