--- a/CalculoIMC/app/src/main/res/values-es/strings.xml
+++ b/CalculoIMC/app/src/main/res/values-es/strings.xml
@@ -1,5 +1,53 @@
 <resources>
-    <string name="app_name">CalculoIMC</string>
-    <string name="action_settings">Settings</string>
-    <string name="splash_screen">Cálculo de IMC</string>
+    <string name="app_name">IMC</string>
+    <string name="action_settings">Configuraciones</string>
+
+    <!--Texts-->
+    <string name="txt_peso">Peso</string>
+    <string name="txt_altura">Altura</string>
+    <string name="txt_resultado">Resultado</string>
+    <string name="txt_cintura">Cintura</string>
+    <string name="txt_quadril">Cadera</string>
+    <string name="txt_idade">Edad</string>
+
+    <!--Botões-->
+    <string name="btn_calcular">Calcular</string>
+    <string name="btn_limpar">Reiniciar</string>
+    <string name="btn_gravar">Grabar</string>
+
+    <!--Radio Group-->
+    <string name="rdg_sexo">Género</string>
+    <string name="rgd_masc">Masculino</string>
+    <string name="rgd_femi">Femenino</string>
+
+    <!--Campos obrigatórios-->
+    <string name="camposObrig">Los campos no pueden quedarse en blanco</string>
+    <string name="campoPeso">Valor del peso requerido</string>
+    <string name="campoAltura">Valor de la altura requerida</string>
+    <string name="campoCintura">Valor de la cintura requerida</string>
+    <string name="campoQuadril">Valor de la cadera requerida</string>
+    <string name="campoIdade">Valor de la edad requerida</string>
+
+    <!--Abas-->
+    <string name="abaImc">IMC</string>
+    <string name="abaRcq">RCC</string>
+
+    <!--Classificação IMC-->
+    <string name="claMagreza1">Bajo el peso</string>
+    <string name="claMagreza2">Muy bajo el peso</string>
+    <string name="claMagreza3">Extremo bajo el peso</string>
+    <string name="claEutrofia">Peso saludable</string>
+    <string name="claSobrepeso">Sobrepeso</string>
+    <string name="claObesidade1">Sobrepeso moderado (Grado I)</string>
+    <string name="claObesidade2">Sobrepeso muy alto (Grado II)</string>
+    <string name="claObesidade3">Sobrepeso extremo (Grado III)</string>
+
+    <!--Classificação RCQ-->
+    <string name="claBaixo">Bajo</string>
+    <string name="claModerado">Moderado</string>
+    <string name="claAlto">Alto</string>
+    <string name="claMuitoAlto">Muy alto</string>
+    <string name="claValorInvalido">Valor invalido</string>
+    <string name="claIdadeInvalido">Edad debe estar entre 29 y 59 años</string>
+
 </resources>
