--- a/CalculoIMC/app/src/main/res/values/strings.xml
+++ b/CalculoIMC/app/src/main/res/values/strings.xml
@@ -47,5 +47,15 @@
     <string name="claModerado">Moderado</string>
     <string name="claAlto">Alto</string>
     <string name="claMuitoAlto">Muito Alto</string>
+    <string name="claValorInvalido">Valor Inválido</string>
+    <string name="claIdadeInvalido">Idade deve estar entre 29 e 59</string>
+
+    <!--Frases-->
+    <string name="fraMuitoBaixo">Você está muito abaixo de seu peso ideal</string>
+    <string name="fraPoucoBaixo">Você está abaixo de seu peso ideal</string>
+    <string name="fraBaixo">Você está um pouco abaixo de seu peso ideal</string>
+    <string name="fraIdeal">Parabéns, você está em seu peso ideal</string>
+    <string name="fraSobre">Você está acima de seu peso ideal</string>
+    <string name="fraMuiAlto">Você está muito acima de seu peso ideal</string>
 
 </resources>
