--- a/CalculoIMC/app/src/main/res/values/strings.xml
+++ b/CalculoIMC/app/src/main/res/values/strings.xml
@@ -50,15 +50,22 @@
     <string name="claModerado">Moderado</string>
     <string name="claAlto">Alto</string>
     <string name="claMuitoAlto">Muito Alto</string>
-    <string name="claValorInvalido">Valor Inválido</string>
+    <string name="claValorInvalido">Valores Inválidos</string>
     <string name="claIdadeInvalido">Idade deve estar entre 29 e 59</string>
 
-    <!--Frases-->
+    <!--Frases ICQ-->
     <string name="fraMuitoBaixo">Você está muito abaixo de seu peso ideal</string>
     <string name="fraPoucoBaixo">Você está abaixo de seu peso ideal</string>
     <string name="fraBaixo">Você está um pouco abaixo de seu peso ideal</string>
     <string name="fraIdeal">Parabéns, você está em seu peso ideal</string>
     <string name="fraSobre">Você está acima de seu peso ideal</string>
     <string name="fraMuiAlto">Você está muito acima de seu peso ideal</string>
+    <string name="pesoIdeal">Seu peso ideal é de aproximadamente: </string>
+
+    <!--Frases RCQ-->
+    <string name="RcqBaixo">Você possui baixo risco para síndromes metabólicas</string>
+    <string name="RcqModerado">Você possui risco moderado para síndromes metabólicas</string>
+    <string name="RcqAlto">Você possui alto risco para síndromes metabólicas</string>
+    <string name="valoresInv">Insira valores válidos</string>
 
 </resources>
